Add notes on packaging with jlink and jpackage